[package]
name = "moviebay"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
hyper = "0.13.7"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
rusqlite = { version = "0.21.0", features = ["bundled", "backup"] }
regex = "1.3.9"
async-trait = "0.1.36"
bytes = "0.5.6"
hyper-tls = "0.4.3"